chore: add api tests for all alternative heartbeat endpoints
